21 -> 11