@@ -13,8 +13,8 @@ public class PatternTestUtil {
     public static CreateRuleStatement compileTestCreateRuleStatement(String pml) throws PMException {
         PMLCompiler pmlCompiler = new PMLCompiler();
         List<PMLStatement> pmlStatements = pmlCompiler.compilePML(pml);
-        CreateObligationStatement stmt = (CreateObligationStatement)pmlStatements.getFirst();
-        return stmt.getRuleStmts().getFirst();
+        CreateObligationStatement stmt = (CreateObligationStatement)pmlStatements.get(0);
+        return stmt.getRuleStmts().get(0);
     }
 
 }
